Wed Jul  5 20:09:41 2000  Andrew Cagney  <cagney@b1.cygnus.com>

	* event-loop.c: Include either <poll.h> or <sys/poll.h>.

	* configure.in (targ_archs): Check for <poll.h> and <sys/poll.h>.
	* configure, config.in: Re-generate.
	
Wed Jul  5 18:10:44 2000  Andrew Cagney  <cagney@b1.cygnus.com>

	From 2000-06-12 Bill Nottingham <notting@redhat.com>:
	* Makefile.in: add $(infodir) to FLAGS_TO_PASS
	
Wed Jul  5 18:03:55 2000  Andrew Cagney  <cagney@b1.cygnus.com>

	* TODO: Updates.

2000-07-05  Mark Kettenis  <kettenis@gnu.org>

	* TODO: Update.

2000-07-03  Chris Faylor  <cfg@cygnus.com>

        Committed by Elena Zannoni <ezannoni@cygnus.com>
	* sh-tdep.c (sh_skip_prologue): Change prologue matching for modern
	compilers.
	(sh_frame_find_saved_regs): Ditto.
	(sh_find_callers_reg): Stop if pc is zero.

Sat Jul  1 17:47:08 2000  Andrew Cagney  <cagney@b1.cygnus.com>

	* ser-unix.c (do_unix_readchar): Revert Tue Mar 28 18:19:50 2000
 	Andrew Cagney <cagney@b1.cygnus.com>.  Locks up when no data is
 	pending.

Sat Jul  1 15:40:14 2000  Andrew Cagney  <cagney@b1.cygnus.com>

	* Makefile.in (SER_HARDWIRE): Restore code to set it by configure.

2000-06-26  Kevin Buettner  <kevinb@redhat.com>

	* copying.awk: Eliminate use of PARAMS from this file.

Fri Jun 23 20:47:03 2000  Andrew Cagney  <cagney@b1.cygnus.com>

	* mips-tdep.c (mips_push_arguments): Use the variable stack_used_p
 	to determine if any arguments were written to the stack.  Do not
 	rely on NUMARG>=8.

Mon Jun 19 11:29:35 2000  Andrew Cagney  <cagney@b1.cygnus.com>

	* command.h (add_set_auto_boolean_cmd): Add declaration.
	(enum var_types): Add var_auto_boolean.

	* command.c (add_set_auto_boolean_cmd): New function.
	(do_setshow_command): Recognize auto_boolean.
	(parse_binary_operation): Recognize enable and disable.
	(parse_auto_binary_operation): Parse auto binary variables.

	* TODO: Update

Fri Jun 23 16:20:21 2000  Andrew Cagney  <cagney@b1.cygnus.com>
