@@ -1,3 +1,10 @@
+Wed Jul  5 20:28:32 2000  Andrew Cagney  <cagney@b1.cygnus.com>
+
+	* top.h (command_loop_marker), top.c (command_loop_marker):
+ 	Delete.
+	* event-top.c (command_handler), top.c (simplified_command_loop,
+ 	command_loop): Use null_cleanup instead of command_loop_marker.
+
 Wed Jul  5 20:09:41 2000  Andrew Cagney  <cagney@b1.cygnus.com>
 
 	* event-loop.c: Include either <poll.h> or <sys/poll.h>.
